--- a/WebApplication1/wwwroot/jokes.html
+++ b/WebApplication1/wwwroot/jokes.html
@@ -8,7 +8,7 @@
     <div>
         <div id="jokelist">  </div>
         <div>
-            <input id="newjoke" type="text" placeholder="Adj meg egy új viccet!" />
+            <input id="jokeText" type="text" placeholder="Adj meg egy új viccet!" />
         </div>
         <button id="addButton">Új vicc felvétele</button>
     </div>
